--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   google_fonts: ^0.3.2
   fluttertoast: ^3.1.3
+  cloud_firestore: ^0.13.0+1
+
 
 dev_dependencies:
   flutter_test:
